@@ -1,3 +1,11 @@
+2005-10-07  Julien MOUTTE  <julien@moutte.net>
+
+	* ext/pitfdll/dmo_venc.c: (dmo_videoenc_sink_setcaps),
+	(dmo_videoenc_chain): Don't push empty buffers.
+	* gst-libs/ext/loader/dmo/DMO_VideoEncoder.c:
+	(DMO_VideoEncoder_Open), (DMO_VideoEncoder_ProcessOutput):
+	* gst-libs/ext/loader/dmo/DMO_VideoEncoder.h: Handle key frames.
+
 2005-10-05  Julien MOUTTE  <julien@moutte.net>
 
 	* ext/pitfdll/dmo_aenc.c: (dmo_audioenc_init),
